Use test objects in OneToOneMappingTest